<resources>
    <string name="app_name">InTouch</string>

    <!-- Authentication -->
    <string name="prompt_nickname">Nickname</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_nickname">Nickname must be in lower case</string>
    <string name="error_invalid_first_name">First name is too short</string>
    <string name="error_invalid_last_name">Last name is too short</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="user_not_found">User not found</string>
    <string name="prompt_register">Register?</string>
    <string name="registration_failed">Registration failed. Check internet connection!</string>
    <string name="turn_on_wifi">Wifi is off. Turn it on?</string>

    <!-- Map -->
    <string name="map">Map</string>

    <!-- Users -->
    <string name="users">Users</string>
    <string name="loading">Loading…</string>
    <string name="location_disabled">You disabled tracking your location</string>
    <string name="nickname">Nickname:</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="email">Email:</string>
    <string name="location">Location:</string>

</resources>
