<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/accent"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="4dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/nickname"
                android:textStyle="normal"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvNickname"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                tools:text="ankoma88"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/firstname"
                android:textStyle="normal"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvFirstName"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                tools:text="Anton"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/lastname"
                android:textStyle="normal"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvLastName"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                tools:text="Komarovskyi"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/email"
                android:textStyle="normal"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                tools:text="ankoma88@gmail.com"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/location"
                android:textStyle="normal"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tvLocation"
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:textSize="14sp"
                android:textColor="@color/primary_dark"
                android:textStyle="bold"
                tools:text="50.566 : 49.444"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>